--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -302,7 +302,7 @@ button.delete-button {
   font-size: 1.5rem;
   font-weight: 400;
   margin: 0;
-  color: #00796b; // Teal 700
+  color: var(--color-heading-secondary);
 }
 
 // Loading spinner
