--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,7 +68,7 @@ html[dir='rtl'] {
 
 .page-title {
   margin-bottom: 16px;
-  color: var(--color-primary);
+  color: var(--color-heading-primary);
   font-weight: var(--font-weight-medium);
 }
 
